--- a/src/assets/styles.scss
+++ b/src/assets/styles.scss
@@ -289,6 +289,7 @@ footer
         {
           display: flex;
           flex-direction: row;
+          /*
           .star
           {
             display: flex;
@@ -297,6 +298,7 @@ footer
             width: 16px;
             height: 16px;
           }
+          */
         }
         p.place-item-rating-reviews-count
         {
